add set object filters route and tests
